edit functionality and other changes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,8 +7,10 @@
   opacity: 0;
 }
 
-.header {
+.page-header {
   color: mediumseagreen;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .joke-text {
